# exospherehost

./: AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md
api-server/: .dockerignore  .gitignore  Dockerfile  dev_private_key.pem  dev_public_key.pem  docker-compose.yml  main.py  pyproject.toml  run.py
api-server/app/: main.py
api-server/app/auth/: get_token_claims.py  router.py  routes.py  settings.py
api-server/app/auth/controllers/: auth_user_crud.py  create_token.py
api-server/app/auth/middlewares/: get_auth_user_middleware.py  get_token_claims.py
api-server/app/auth/models/: auth_user_create.py  auth_user_database.py  credential.py  enums.py  identifier.py  revoked_token_database.py  token_claims.py  token_request.py  token_response.py
api-server/app/auth/services/: get_token_claims.py
api-server/app/auth/validators/: __init__.py
api-server/app/middlewares/: request_id_middleware.py  unhandled_exceptions_middleware.py
api-server/app/project/: routes.py
api-server/app/project/controllers/: create_project.py
api-server/app/project/models/: billing_account.py  create_project_request.py  create_project_response.py  permission_enum.py  project_user.py  (+2 more)
api-server/app/satellite/: routes.py
api-server/app/singletons/: SingletonDecorator.py  logs_manager.py
api-server/app/user/: routes.py
docs/: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/docs/: architecture.md  cluster.md  getting-started.md  index.md
docs/docs/api-server/: index.md  swagger.md
docs/docs/satellites/: index.md
docs/docs/stylesheets/: extra.css
(+96 files in other folders)
